--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,14 @@
 }
 
 /*General Styling*/
+
+.dark-mode{
+  --clr-neutral-800: hsl(200, 60%, 99%);
+  --clr-neutral-300: hsl(227, 75%, 14%);
+  --clr-neutral-100: hsl(226, 25%, 17%);
+  --clr-neutral-200: hsl(225, 23%, 24%);
+}
+
 body{
     font-size: var(--ff-body);
     font-family: var(--ff-body);
@@ -69,6 +77,10 @@ body{
 
 .mb-3{
   margin-bottom: 2rem;
+}
+
+.text-white{
+  color: var(--clr-neutral-100);
 }
 
 /*CSS Reset*/
@@ -155,6 +167,8 @@ svg {
   align-items: center;
   justify-content: center;
   border-radius: 8px;
+  cursor: pointer;
+  border: 0;
 }
 
 .switch {
@@ -177,7 +191,7 @@ svg {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--clr-neutral-400);
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -189,7 +203,7 @@ svg {
     width: 18px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: var(--clr-neutral-100);
     -webkit-transition: .4s;
     transition: .4s;
 }
